--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-title: Decoding Michelangelo: Uber’s Machine Learning Platform
-description: By Ishaan Gupta
+title: "Decoding Michelangelo: Uber’s Machine Learning Platform"
+description: "By Ishaan Gupta"
 theme: minima
